--- a/back-office-ui/src/main/resources/templates/edit-conference.html
+++ b/back-office-ui/src/main/resources/templates/edit-conference.html
@@ -29,16 +29,17 @@
 
     <label>Start Time:</label><br/>
     <input
-        type="text"
+        type="datetime-local"
+
         th:field="*{startTime}"
-        th:value="${#temporals.format(startTime, 'dd-MM-yyyy HH:mm')}"
+        th:value="${#temporals.format(startTime, 'yyyy-MM-dd HH:mm')}"
         required
         th:style="'width: 40ch;'"/>
     <br/><br/>
 
     <label>End Time:</label><br/>
     <input
-        type="text"
+        type="datetime-local"
         th:field="*{endTime}"
         th:value="${#temporals.format(endTime, 'dd-MM-yyyy HH:mm')}"
         required
