--- a/back-office-ui/src/main/resources/templates/edit-conference.html
+++ b/back-office-ui/src/main/resources/templates/edit-conference.html
@@ -32,7 +32,7 @@
         type="datetime-local"
 
         th:field="*{startTime}"
-        th:value="${#temporals.format(startTime, 'yyyy-MM-dd HH:mm')}"
+        th:value="${#temporals.format(startTime, 'yyyy-MM-dd''T''HH:mm')}"
         required
         th:style="'width: 40ch;'"/>
     <br/><br/>
@@ -41,7 +41,7 @@
     <input
         type="datetime-local"
         th:field="*{endTime}"
-        th:value="${#temporals.format(endTime, 'dd-MM-yyyy HH:mm')}"
+        th:value="${#temporals.format(endTime, 'yyyy-MM-dd''T''HH:mm')}"
         required
         th:style="'width: 40ch;'"/>
     <br/><br/>
